--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "scripts": {
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+  },
   "dependencies": {
     "@narative/gatsby-theme-novela": "^0.18.0",
     "gatsby": "^2.24.63",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
