add blog foleder because gatsby does not support ouput dir option

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "deploy": "rm -rf public && gatsby build --prefix-paths"
+    "local":"gatsby develop",
+    "deploy": "rm -rf public && gatsby build --prefix-paths && mv public blog"
   },
   "dependencies": {
     "@narative/gatsby-theme-novela": "^0.*",
